# AoC_2023

./: .gitignore
day_1/: CMakeLists.txt  lib.c  lib.h  lib.test.c  main.c
day_10/: CMakeLists.txt  common.h  lib.c  lib.h  lib.test.c  main.c
day_11/: common.h  lib.c  lib.h  lib.test.c  main.c
day_12/: CMakeLists.txt  common.h  lib.c  lib.h  lib.test.c  main.c
day_13/: CMakeLists.txt  lib.c  lib.h  lib.test.c  main.c
day_2/: CMakeLists.txt  common.h  lib.c  lib.h  lib.test.c  main.c
day_3/: common.h  lib.c  lib.h  lib.test.c  main.c
day_4/: CMakeLists.txt  lib.c  lib.h  lib.test.c  main.c
day_5/: CMakeLists.txt  lib.c  lib.h  lib.test.c  main.c
day_6/: CMakeLists.txt  lib.c  lib.h  lib.test.c  main.c
day_7/: CMakeLists.txt  Makefile  lib.c  lib.h  lib.test.c  main.c
day_8/: CMakeLists.txt  common.h  lib.c  lib.h  lib.test.c  main.c
day_9/: lib.c  lib.h  lib.test.c  main.c
template/: CMakeLists.txt  lib.c  lib.h  lib.test.c  main.c
